  * Intervention is now based on a minumum 0.25 second interval
  * Extended scope now covers Mac OS again (previously removed)
- Improves 'ProtectNVRAM' Implementation
  * Now ensures this is reset on each loop through the RefindPlus Main Loop
  * This ensures the filtering is not on if UEFI Windows boot fails
  * Only has cosmetic relevance but best practice


0.13.2.AJ (06 Oct 2021):
-----------------------
- Fixes 'PreBoot' Volume Filtering in REL Builds
- Deactivates Log Level 5


0.13.2.AH (05 Oct 2021):
-----------------------
- Adds "PreferHiddenIcons" Feature
  * This functionality allows prioritising the use of ".VolumeIcon" image icons for loaders
- Adds Non-Standard UEFI 2.x Implementation Resilience
  * Some UEFI 2.x implementations may be incomplete with some functionality missing
  * This is typically due to customisation of the firmware as on Late Intel Macs such as the MacMini8,1
  * This affected running the DEBUG build on such units
  * RefindPlus now accommodates this situation.
- Adds Forced Shutdown on Secure Boot Setup Failure
  * RefindPlus will now shutdown if meant to use secure boot but this could not be set up
- Fixes Failure to Detect Linux Partitions
  * Linux partitions were not detected and therefore, could not be booted by RefindPlus
- Fixes Implicit Casting of Some Config Integers
  * Some config tokens that could take negative values such as "screensaver" were handled as Unsigned Integers
  * These are now correctly handled as Signed Integers
- Fixes Driver Loading from User Defined Folders
  * Drivers in folders defined by the 'scan_driver_dirs' configuration token were not loaded in some instances
  * This was because the routine expected the defined paths to not include the installation folder path
  * This expectation was not specified however, meaning some users included the path in 'scan_driver_dirs'
  * This expectation has now been removed and the installation folder path may or may not be included